--- a/style.css
+++ b/style.css
@@ -312,3 +312,35 @@ footer {
     background-positon-x: 0px;
   }
 }
+/* Styles for the overlay */
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+}
+
+/* Styles for the popup */
+.popup {
+  font-size: large;
+  display: none;
+  position: fixed;
+  background-image: url(backdrop_evening.jpg);
+  padding: 100px;
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Style for the close button */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
