--- a/style.css
+++ b/style.css
@@ -56,12 +56,12 @@ nav ul li a {
     color: #f06969;
 }
 .carousel-container {
-    background-color: #3a9ae3;
+   
     position: relative;
     width: 100%; /* Adjust the width as needed */
     height: 35%;
     overflow: hidden;
-    margin: 0 auto;
+  
 }
 .image_in_it{
     display: flex;
@@ -73,16 +73,16 @@ nav ul li a {
 
 
 .form-container {
-    background-color: rgba(0, 0, 0, 0.7);
-    float: left;
-    width: 100%;
-    margin-top: 255px;
-    margin-left: 20px;
-    margin-bottom: 40px;
-    padding: 20px;
-    border: 2px solid #c1b2b2;
-    border-radius: 20px;
-    color: whitesmoke;
+  background-color: rgba(0, 0, 0, 0.7);
+  float: left;
+  width: 38%;
+  margin-top: 67px;
+  margin-left: 457px;
+  margin-bottom: 17rem;
+  padding: 20px;
+  border: 2px solid #c1b2b2;
+  border-radius: 20px;
+  color: whitesmoke;
 }
 .container {
     background-color: #fff;
@@ -361,4 +361,52 @@ select {
   border-radius: 5px;
   cursor: pointer;
   margin-top: 10px;
+}
+.carousel-container {
+
+  position: relative;
+  width: 100vw; /* Adjust the width as needed */
+  height: 850px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.carousel {
+  background-color: #3a9ae3;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+  width: 100vw; /* Adjust the width as needed */
+  flex-shrink: 0;
+  flex-grow: 0;
+  height: 853; /* Adjust the height as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(backdrop.jpg); /* Add your item background styles */
+  /*! margin-right: 20px; */ /* Adjust spacing between items */
+  font-size: 24px; /* Adjust font size */
+}
+.topheading{
+  position: absolute;
+  color: black;
+  top: 50%;
+  font-size: 3rem;
+  right: 50%;
+}
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #080909; /* Button background color */
+  color: #fff; /* Button text color */
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.next-button {
+  right: 20px;
 }
